# ekf-mono-slam

./: .clang-format  .clangd  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  pixi.toml  pyrightconfig.json
.github/workflows/: ci.yaml
include/: configuration_manager.h  covariance_matrix.h  draw.h  ekf.h  ekf_math.h  ellipse.h  feature_detector.h  file_sequence_image_provider.h  image_feature.h  image_feature_measurement.h  image_feature_prediction.h  image_file_type.h  image_file_utils.h  image_provider.h  map_feature.h  map_feature_type.h  mono_slam.h  state.h  visualizer.h  zone.h
include/configuration/: camera_parameters.h  image_feature_parameters.h  kinematics_parameters.h
include/feature/: descriptor_extractor_type.h  detector_type.h  feature_detector.h  image_feature.h  image_feature_measurement.h  image_feature_prediction.h  map_feature.h  map_feature_type.h  undistorted_image_feature.h  zone.h
include/filter/: covariance_matrix.h  ekf.h  state.h
include/image/: file_sequence_image_provider.h  image_file_format.h  image_file_utils.h  image_provider.h
include/math/: ekf_math.h
include/slam/: mono_slam.h
include/visual/: ellipse.h  visual.h
install/: local_setup.bash  local_setup.ps1  local_setup.sh  local_setup.zsh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/ekf-mono-slam/lib/ekf-mono-slam/: publisher  subscriber
install/ekf-mono-slam/share/ament_index/resource_index/package_run_dependencies/: ekf-mono-slam
install/ekf-mono-slam/share/ament_index/resource_index/parent_prefix_path/: ekf-mono-slam
install/ekf-mono-slam/share/ekf-mono-slam/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ekf-mono-slam/share/ekf-mono-slam/cmake/: ekf-mono-slamConfig-version.cmake  ekf-mono-slamConfig.cmake
install/ekf-mono-slam/share/ekf-mono-slam/environment/: ament_prefix_path.dsv  ament_prefix_path.sh  path.dsv  path.sh
log/: latest_build
rerun/: my_app.rbl
src/: covariance_matrix.cpp  draw.cpp  ekf.cpp  ekf_math.cpp  ellipse.cpp  feature_detector.cpp  file_sequence_image_provider.cpp  image_feature.cpp  image_feature_measurement.cpp  image_feature_prediction.cpp  main.cpp  map_feature.cpp  mono_slam.cpp  state.cpp  visualizer.cpp  zone.cpp
src/ekf-mono-slam/: CMakeLists.txt  package.xml
src/ekf-mono-slam/include/: collection_adapters.h  ekf_node.h  feature_detector_node.h  file_sequence_image_node.h
src/ekf-mono-slam/include/configuration/: camera_parameters.h  image_feature_parameters.h  kinematics_parameters.h
src/ekf-mono-slam/include/feature/: cartesian_map_feature.h  depth_map_feature.h  descriptor_extractor_type.h  detector_type.h  ellipse.h  feature_detector.h  image_feature.h  image_feature_measurement.h  image_feature_prediction.h  inverse_depth_map_feature.h  map_feature.h  map_feature_type.h  undistorted_image_feature.h  zone.h
src/ekf-mono-slam/include/filter/: covariance_matrix.h  ekf.h  state.h
src/ekf-mono-slam/include/image/: file_sequence_image_provider.h  image_file_format.h  image_file_utils.h  image_provider.h
src/ekf-mono-slam/include/matching/: matching.h
src/ekf-mono-slam/include/math/: ekf_math.h
src/ekf-mono-slam/include/visual/: ellipse.h  visual.h
src/ekf-mono-slam/launch/: vslam.launch.py
src/ekf-mono-slam/msg/: CovarianceMatrix.msg  ImageFeatureMeasurement.msg  ImageFeatureMeasurementArray.msg  ImageFeatureMeasurements.msg  ImageFeaturePrediction.msg  State.msg
src/ekf-mono-slam/src/: ekf_node.cpp  feature_detector_node.cpp  file_sequence_image_node.cpp  publisher.cpp  publisher_node.cpp  subscriber.cpp  subscriber_node.cpp
src/ekf-mono-slam/src/feature/: cartesian_map_feature.cpp  depth_map_feature.cpp  ellipse.cpp  feature_detector.cpp  image_feature.cpp  image_feature_measurement.cpp  image_feature_prediction.cpp  inverse_depth_map_feature.cpp  map_feature.cpp  undistorted_image_feature.cpp  zone.cpp
src/ekf-mono-slam/src/filter/: covariance_matrix.cpp  ekf.cpp  state.cpp
src/ekf-mono-slam/src/image/: file_sequence_image_provider.cpp
src/ekf-mono-slam/src/matching/: matching.cpp
src/ekf-mono-slam/src/math/: ekf_math.cpp
src/ekf-mono-slam/src/visual/: ellipse.cpp  visual.cpp
src/ekf-mono-slam/srv/: FeatureDetect.srv  FeatureDetector.srv
src/ekf-mono-slam/test/: itest_slam.cpp  utest_feature.cpp  utest_filter.cpp  utest_image.cpp  utest_math.cpp
src/feature/: feature_detector.cpp  image_feature.cpp  image_feature_measurement.cpp  map_feature.cpp  undistorted_image_feature.cpp  zone.cpp
src/filter/: covariance_matrix.cpp  ekf.cpp  state.cpp
src/image/: file_sequence_image_provider.cpp
src/math/: ekf_math.cpp
src/slam/: mono_slam.cpp
src/visual/: ellipse.cpp  visual.cpp
test/: utest_ekf_mono_slam.cpp  utest_feature.cpp  utest_filter.cpp  utest_image.cpp  utest_math.cpp  utest_state.cpp
